<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_todo">

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.example.myrouteoptimization.ui.main.todo.TodoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_done"
        android:name="com.example.myrouteoptimization.ui.main.done.DoneFragment"
        android:label="@string/title_done"
        tools:layout="@layout/fragment_done" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myrouteoptimization.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>